--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,12 @@
   border-left: 4px solid transparent;
   box-shadow: 0 0 1px rgb(0, 0, 0);
 }
+
 @keyframes rotation {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -76,18 +78,12 @@
   padding: 10px;
 }
 
-.category {
-  perspective: 1000px;
+.category,
+.category img {
   transition: 0.5s;
 }
+
 .category:hover img{
-  box-shadow: 0 0 15px rgb(179, 179, 179);
-  transform-style: preserve-3d;
-  transform: rotateX(45deg);
+   box-shadow: 5px 5px 10px rgb(207, 206, 206);
 }
-
-.category img{
- 
-}
-
 
