--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,10 @@ details[open] .downarrow {
   grid-column: 2 / 3;
 }
 
+.wishlist-icon{
+  box-shadow: 2px 2px 5px rgb(199, 197, 197) inset;
+}
+
 @media (max-width: 992px) {
   .kv-logo {
     position: absolute;
