--- a/src/App.css
+++ b/src/App.css
@@ -100,8 +100,42 @@ details[open] .downarrow {
   grid-column: 2 / 3;
 }
 
-.wishlist-icon{
+.wishlist-icon {
   box-shadow: 2px 2px 5px rgb(199, 197, 197) inset;
+}
+
+.product_image_skeleton {
+  position: relative;
+  animation: skeleton 2s linear infinite alternate;
+}
+
+.big_image .slide_image img {
+  height: 500px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 30px;
+}
+.product_img_nav .slide_image img {
+  height: 90px;
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.small_image .slide_image{
+  padding: 10px;
+}
+
+@keyframes skeleton {
+  0% {
+    background: white;
+  }
+  50% {
+    background: #8cbf444f;
+  }
+  100% {
+    background: white;
+  }
 }
 
 @media (max-width: 992px) {
@@ -225,6 +259,15 @@ details[open] .downarrow {
   .sort-product-tab-section > div.active {
     bottom: 0;
   }
+
+  .product_img_nav .slide_image{
+    flex-shrink: 0;
+  }
+  .product_img_nav .slide_image img {
+    height: 70px;
+    width: 100px;
+  }
+
 }
 
 .category,
