--- a/src/App.css
+++ b/src/App.css
@@ -330,7 +330,7 @@ details[open] .downarrow {
   border-radius: 50%;
   border: 8px solid white;
   /* box-shadow: 0 0 5px rgb(163, 162, 162); */
-  animation: animateGradient forwards 2s infinite linear;
+  animation: animateGradient3 forwards 2s infinite linear;
 }
 
 /* .weather-section-homepage{
@@ -370,5 +370,19 @@ details[open] .downarrow {
   }
   100% {
     background: whitesmoke;
+  }
+}
+@keyframes animateGradient3 {
+  0% {
+    background: linear-gradient(120deg, #13693a, #8cbf44);
+    scale: 1;
+  }
+  50% {
+    background: linear-gradient(240deg, #13693a, #8cbf44);
+    scale: 1.1;
+  }
+  100% {
+    background: linear-gradient(360deg, #13693a, #8cbf44);
+    scale: 1;
   }
 }
