--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@ details[open] .downarrow {
 /* Change background color when checkbox is checked */
 .filter-product-sidebar input[type="checkbox"]:checked + label {
   color: white;
-background: #8cbf44e1 /* Light blue */
+background: linear-gradient(#13693a, #8cbf44) /* Light blue */
 }
 
 @keyframes skeleton {
@@ -265,7 +265,7 @@ background: #8cbf44e1 /* Light blue */
     z-index: 10;
     transition: 0.5s;
     overflow-y: auto;
-    padding: 10px 10px 100px 10px;
+    padding: 10px 10px 180px 10px;
   }
 
   .filter-product-sidebar.active {
@@ -417,3 +417,103 @@ background: #8cbf44e1 /* Light blue */
     scale: 1;
   }
 }
+
+
+/* PRICE RANGE SLIDER */
+
+/* Import Google Font - Poppins */
+
+::selection {
+  color: #fff;
+  background: #13693a;
+}
+.wrapper {
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px 25px 40px;
+  box-shadow: 0 12px 35px rgba(0, 0, 0, 0.1);
+}
+
+.price-range .price-input {
+  width: 100%;
+  display: flex;
+  margin: 30px 0 35px;
+}
+.price-range .price-input .field {
+  display: flex;
+  width: 100%;
+  height: 45px;
+  align-items: center;
+}
+.price-range .field input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  margin-left: 12px;
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid #999;
+  -moz-appearance: textfield;
+}
+.price-range input[type="number"]::-webkit-outer-spin-button,
+.price-range input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+.price-range .price-input .separator {
+  width: 130px;
+  display: flex;
+  font-size: 19px;
+  align-items: center;
+  justify-content: center;
+}
+.price-range .slider {
+  height: 5px;
+  position: relative;
+  background: #ddd;
+  border-radius: 5px;
+}
+.price-range .slider .progress {
+  height: 100%;
+  left: 25%;
+  right: 25%;
+  position: absolute;
+  border-radius: 5px;
+  background: #13693a;
+}
+.price-range .range-input {
+  position: relative;
+}
+.price-range .range-input input {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  top: -5px;
+  background: none;
+  pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.price-range input[type="range"]::-webkit-slider-thumb {
+  height: 17px;
+  width: 17px;
+  border-radius: 50%;
+  background: #13693a;
+  pointer-events: auto;
+  -webkit-appearance: none;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+}
+.price-range input[type="range"]::-moz-range-thumb {
+  height: 17px;
+  width: 17px;
+  border: none;
+  border-radius: 50%;
+  background: #13693a;
+  pointer-events: auto;
+  -moz-appearance: none;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+}
+
+
+
+
+
