--- a/src/App.css
+++ b/src/App.css
@@ -621,3 +621,143 @@ details[open] .downarrow {
   margin-top: 10%;
   box-shadow: 0 0 10px rgb(209, 208, 208);
 }
+
+.crop-calender-menus .menus .rabi div:hover,
+.crop-calender-menus .menus .rabi.active div,
+.crop-calender-menus .menus .kharif div:hover,
+.crop-calender-menus .menus .kharif.active div,
+.crop-calender-menus .menus .zaid div:hover,
+.crop-calender-menus .menus .zaid.active div {
+  @apply animate-pulse bg-[#8cbf449f];
+}
+
+.menu-content .rabi-crop,
+.menu-content .kharif-crop,
+.menu-content .zaid-crop {
+  @apply flex bg-white md:w-[45%] w-[100%] items-center gap-10 rounded-3xl transition-[0.5s] overflow-hidden shadow-lg;
+}
+
+.menu-content .rabi-crop:hover,
+.menu-content .kharif-crop:hover,
+.menu-content .zaid-crop:hover {
+  @apply scale-105;
+}
+
+.menu-content .rabi-crop p,
+.menu-content .kharif-crop p,
+.menu-content .zaid-crop p {
+  @apply text-center text-darkGreen lg:text-3xl text-lg font-bold;
+}
+
+.menu-content .rabi-crop img,
+.menu-content .kharif-crop img,
+.menu-content .zaid-crop img {
+  @apply lg:h-[150px] h-[100px] w-[100px] lg:w-[200px] object-cover;
+}
+
+.crop-information h2,
+.crop-information h1 {
+  color: #8dbf45;
+  text-align: center;
+  border: 2px solid #8dbf45;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 20px 0;
+  font-size: 25px;
+}
+
+.crops-banner h1 {
+  @apply lg:text-6xl text-2xl;
+  font-weight: bold;
+  color: #13693a;
+  border: 3px solid #13693a;
+  text-shadow: 0 0 10px white;
+}
+
+.crop-info ul {
+  list-style: disc !important;
+  padding: 15px 30px;
+}
+
+.crop-info ul li {
+  margin-bottom: 15px;
+}
+
+.crop-info ol {
+  list-style: decimal;
+  padding: 15px 30px;
+}
+
+.crop-info [class*="col-"] {
+  position: relative;
+  width: 100%;
+  padding: 10px;
+  /* padding-left: 15px; */
+  /* Box-sizing used to ensure padding is included in the width */
+  box-sizing: border-box;
+}
+
+.crop-info .row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.crop-info h3 {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.crop-info img {
+  width: 100%;
+  height: 250px;
+  border-radius: 20px;
+  margin-bottom: 10px;
+  object-fit: cover;
+}
+
+.crops-navigation .crops-box {
+  background: linear-gradient(transparent, #8dbf45);
+  padding: 10px;
+  border-radius: 25px;
+  box-shadow: 0 0 10px #d9d9d9;
+  margin-bottom: 10px;
+  gap: 40px;
+  transition: 0.5s;
+}
+
+.crops-navigation .crops-box:hover {
+  scale: 1.05;
+}
+
+.crops-banner {
+  border-radius: 25px;
+}
+
+.crops-navigation .crops-box img {
+  @apply lg:h-[80px] lg:w-[80px] h-[50px] w-[50px];
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.crops-navigation .other-crops-option h4 {
+  color: green;
+  @apply md:text-2xl text-lg mb-5;
+  border-bottom: 3px dotted green;
+  border-top: 3px dotted green;
+  padding: 10px;
+  text-align: end;
+}
+
+.crops-box h3 {
+  @apply lg:text-2xl text-lg;
+}
+
+/* `col-md-6` specific rules at medium breakpoints */
+@media (min-width: 768px) {
+  .crop-info .col-md-6 {
+    /* This sets the width to 50% (6 out of 12 columns) of the container */
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
